# Pilk-DCE

./: .gh_status_ignore.json  .gitignore  .tasks.archive.json  .tasks.json  AGENDA.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  LICENSE  MEMORY.md  README.md  TOOLS.md  USER.md  coffee-dce.yaml  crypto_news_report.txt  crypto_news_scraper.py  hello_codex.py  pilk-delta.py  pilk-paper-trades.json  pilk-paper-trades.py  pilk-sync.sh  pilk_tasks_parser.py  pyproject.toml  requirements.txt  test.txt
Pilk-TradeJournal/: README.md  pyproject.toml
Pilk-TradeJournal/pilk_tradejournal/: __init__.py  cli.py
Projects/Pilk-Flights/: README.md
memory/: 2026-02-02.md  2026-02-03.md  2026-02-04-lotto-scan.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  heartbeat-state.json  phase-one-projects.md
pilk_dce/: __init__.py  cli.py  design.py  optimize.py  utils.py  visualize.py
pilk_dce/webui/: README.md  VIDEO_WALKTHROUGH.md  __init__.py  app.py  utils.py  visualizations.py
pilk_dce/webui/pages/: __init__.py  analyzer.py  designer.py  export.py  generator.py  home.py  visualizer.py
